--- a/.github/workflows/clangtidy.yml
+++ b/.github/workflows/clangtidy.yml
@@ -34,7 +34,7 @@ jobs:
             sudo apt-get update
             sudo apt-get install -y \
                 clang-tidy-18  \
-                clang-tidy 18 \
+                clang-18 \
                 cmake
 
         - name: Run clang-tidy
