--- a/.github/workflows/clangtidy.yml
+++ b/.github/workflows/clangtidy.yml
@@ -23,6 +23,10 @@ jobs:
     clang-tidy:
       runs-on: [ubuntu-24.04]
 
+      container:
+        image: dealii/dealii:v9.6.0-jammy
+        options: --user root
+
       steps:
         - name: Checkout repo
           uses: actions/checkout@v4
@@ -34,8 +38,7 @@ jobs:
             sudo apt-get update
             sudo apt-get install -y \
                 clang-tidy-18  \
-                clang-18 \
-                cmake
+                clang-18
 
         - name: Run clang-tidy
           run: |
