--- a/.github/workflows/clangtidy.yml
+++ b/.github/workflows/clangtidy.yml
@@ -21,7 +21,7 @@ concurrency:
 
 jobs:
     clang-tidy:
-      runs-on: [ubuntu-24.04]
+      runs-on: [ubuntu-22.04]
 
       container:
         image: dealii/dealii:v9.6.0-jammy
@@ -35,10 +35,10 @@ jobs:
 
         - name: Download dependencies
           run: |
-            sudo apt-get update
-            sudo apt-get install -y \
-                clang-tidy-18  \
-                clang-18
+            apt-get update
+            apt-get install -y \
+                clang-tidy-16  \
+                clang-16
 
         - name: Run clang-tidy
           run: |
