--- a/.github/workflows/clangtidy.yml
+++ b/.github/workflows/clangtidy.yml
@@ -48,6 +48,9 @@ jobs:
             chmod +x llvm.sh
             ./llvm.sh 16
 
+        - name: Set up path for llvm-16.0.0
+          run: echo "/usr/lib/llvm-16/bin" >> $GITHUB_PATH
+
         - name: Run clang-tidy
           run: |
             ./utilities/clang_tidy.sh .
