--- a/.github/workflows/clangtidy.yml
+++ b/.github/workflows/clangtidy.yml
@@ -33,24 +33,24 @@ jobs:
           with:
             fetch-depth: 30
 
-        - name: Cache llvm-16 installation
+        - name: Cache llvm-18 installation
           uses: actions/cache@v3
           with:
-            path: /usr/lib/llvm-16
-            key: ${{ runner.os }}-llvm-16
+            path: /usr/lib/llvm-18
+            key: ${{ runner.os }}-llvm-18
             restore-keys: |
               ${{ runner.os }}-llvm
 
-        - name: Install llvm-16
+        - name: Install llvm-18
           if: steps.cache.outputs.cache-hit != 'true'
           run: |
             wget https://apt.llvm.org/llvm.sh
             chmod +x llvm.sh
-            ./llvm.sh 16
+            ./llvm.sh 18 all
 
-        - name: Set up path for llvm-16
+        - name: Set up path for llvm-18
           run: |
-            echo "/usr/lib/llvm-16/bin" >> "$GITHUB_PATH"
+            echo "/usr/lib/llvm-18/bin" >> "$GITHUB_PATH"
 
         - name: Run clang-tidy
           run: |
